# animatic

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: build.yml
docs/screenshots/: README.md
src/animatic/: __init__.py  engine.py  main_window.py  models.py  player.py
tests/: test_engine.py  test_gui.py  test_models.py  test_player.py
