[project]
name = "animatic"
version = "0.1.0"
description = "A free, fast storyboard animatic tool. Drag images, add audio, preview instantly, export video."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "imageio-ffmpeg>=0.6.0",
    "pyside6>=6.10.2",
]

[project.scripts]
animatic = "animatic.main_window:main"

[project.gui-scripts]
animatic = "animatic.main_window:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-qt>=4.5.0",
    "ruff>=0.15.1",
]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # line length handled by ruff format; CSS strings exceed limits

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
